--- a/org.jrebirth/analyzer/src/main/jnlp/template.vm
+++ b/org.jrebirth/analyzer/src/main/jnlp/template.vm
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<jnlp spec="1.0+" xmlns:jfx="http://javafx.com" codebase="http://www.jrebirth.org/breizhcamp" href="Breizhcamp.jnlp">
+<jnlp spec="1.0+" xmlns:jfx="http://javafx.com"  href="JRebirthAnalyzer.jnlp"> <!-- codebase="http://www.jrebirth.org/analyzer" -->
 	<information>
 		<title>${project.name}</title>
 		<vendor>Sébastien Bordes</vendor>
