Correct some image and css path for maven site

--- a/org.jrebirth/src/site/resources/css/contribute.css
+++ b/org.jrebirth/src/site/resources/css/contribute.css
@@ -21,37 +21,37 @@ div.soft {
     width: 30%;
 }
 div#youtrack {
-    background-image: url("images/soft/youtrack.png");
+    background-image: url("../images/soft/youtrack.png");
     background-position: left center;
     background-repeat: no-repeat;
 }
 div#jenkins {
-    background-image: url("images/soft/jenkins.png");
+    background-image: url("../images/soft/jenkins.png");
     background-position: left center;
     background-repeat: no-repeat;
 }
 div#sonar {
-    background-image: url("images/soft/sonar.png");
+    background-image: url("../images/soft/sonar.png");
     background-position: left center;
     background-repeat: no-repeat;
 }
 div#artifactory {
-    background-image: url("images/soft/artifactory.png");
+    background-image: url("../images/soft/artifactory.png");
     background-position: left center;
     background-repeat: no-repeat;
 }
 div#github {
-    background-image: url("images/soft/github.png");
+    background-image: url("../images/soft/github.png");
     background-position: left center;
     background-repeat: no-repeat;
 }
 div#maven {
-    background-image: url("images/soft/maven.png");
+    background-image: url("../images/soft/maven.png");
     background-position: left center;
     background-repeat: no-repeat;
 }
 div#yourkit {
-    background-image: url("images/soft/yourkit.png");
+    background-image: url("../images/soft/yourkit.png");
     background-position: left center;
     background-repeat: no-repeat;
 }
