Fix the download box style

--- a/org.jrebirth/src/site/resources/css/homepage.css
+++ b/org.jrebirth/src/site/resources/css/homepage.css
@@ -94,6 +94,9 @@ div#download a {
 	color:#756f6b;
 }
 
+div#download ul{
+	padding:0;
+}
 div#download ul li{
 	list-style-type:none;
 	margin-bottom:8px;
